--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "code-oss-dev",
+  "name": "code-essence",
   "version": "1.10.1",
   "electronVersion": "1.4.6",
   "distro": "64f6f295b56a3512bf34dfb643f770160fd33ee8",
